--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,3 +28,25 @@ a {
     background: black;
   }
 }
+
+.custom-underline{
+  position: relative;
+  padding: 3px 0px;
+}
+.custom-underline::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.1em;
+  background-color: #3b82f6;
+  opacity: 0;
+  transition: opacity 300ms, transform 300ms;
+}
+
+.custom-underline:hover::after,
+.custom-underline:focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0.2em, 0);
+}
